Remove deprecated API (#360)